--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Halcyon Days - An Exclusive Freebie for Codrops by Peter Finlan.</title>
+    <title>SARA MEISBURGER</title>
     <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
@@ -275,7 +275,7 @@
                           </ul>
                         </div>
                       </div>
-                      
+
                       <div class="col-md-4 wp5 delay-05s">
                         <img src="img/team-02.png" alt="Team Member">
                         <h2>Cersei Lannister</h2>
