Changed background picture

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
               <div class="col-md-4">
                 <div class="light-box box-hover">
                   <h2><i class="fa fa-paper-plane"></i><span>Email</span></h2>
-                  <p><a href="#">hey@halcyondays.com</a></p>
+                  <p><a href="#">sarameisburger@gmail.com</a></p>
                 </div>
               </div>
             </div>
