Changed styling and color and background!

--- a/index.html
+++ b/index.html
@@ -49,17 +49,18 @@
               <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center inner">
                   <h1 class="animated fadeInDown">SARA<span>MEISBURGER</span></h1>
-                  <p class="animated fadeInUp delay-05s">welcome</p>
+                  <p class="animated fadeInUp delay-05s"></p>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
-                  <a href="http://resume.sarameisburger.com" class="learn-more-btn">view my resume</a>
+                  <a href="http://resume.sarameisburger.com" class="learn-more-btn"></a>
                 </div>
               </div>
             </div>
           </section>
         </header>
+        <!--
         <section class="intro text-center section-padding" id="intro">
           <div class="container">
             <div class="row">
