practice branch for mobile view

--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=1000; height=1000">
-    <title>SARA MEISBURGER</title>
-    <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
+    <meta name=viewport content="width=device-width, initial-scale=.75">
+    <link href='http://fonts.googleapis.com/css?family=Poiret One' rel='stylesheet' type='text/css'>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/flexslider.css" rel="stylesheet" >
     <link href="css/styles.css" rel="stylesheet">
-    <link href="css/queries.css" rel="stylesheet">
-    <link href="css/animate.css" rel="stylesheet">
-        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-        <![endif]-->
-      </head>
-      <body id="top">
-        <header id="home">
+  </head>
+
+    <body id="top">
+      <header id="home">
+
+        <div id="menu-word"></div>
+          <a href="https://www.linkedin.com/in/sarameisburger" class="btn_link">LINKEDIN</a>
+          <a href="https://github.com/sarameisburger" class="btn_git">GITHUB</a>
+          <a href="http://resume.sarameisburger.com" class="btn_res">RESUME</a>
+            <style>
+              body {
+                font-family: 'Poiret One';
+                font-size: 15px;
+                font-weight: bold;
+              }
+            </style>
+
           <section class="hero" id="hero">
             <div class="container">
               <div class="row">
@@ -28,21 +30,22 @@
                   <a id="nav-toggle" class="nav_slide_button" href="#"><span></span></a>
                 </div>
               </div>
+            <div class="row">
+            <div class="col-md-6 col-md-offset-3 text-center">
+            <div class="col-md-8 col-md-offset-2 text-center inner">
+
+              <h1 class="animated fadeInDown">SARA<span>MEISBURGER</span></h1>
+
+            </div>
               <div class="row">
-                <div class="col-md-6 col-md-offset-3 text-center">
-                  <a href="https://www.linkedin.com/in/sarameisburger" class="resume-btn">view my LinkedIn</a>
-                <div class="col-md-8 col-md-offset-2 text-center inner">
-                  <h1 class="animated fadeInDown">SARA<span>MEISBURGER</span></h1>
-                  <p class="animated fadeInUp delay-05s"></p>
-                </div>
-                <div class="row">
-                </div>
               </div>
             </div>
-          </section>
-        </header>
+          </div>
+        </section>
+      </header>
+
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script   src="https://code.jquery.com/jquery-3.0.0.min.js"   integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0="   crossorigin="anonymous"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="js/waypoints.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
@@ -51,3 +54,4 @@
         <script src="js/modernizr.js"></script>
       </body>
     </html>
+
